examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__named_expressions@foo(x := 3, cat='vector').snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [
                                                    Expression(
                                                        NamedExpression(
                                                            NamedExpression {
                                                                value: PrimaryExpression(
                                                                    Integer(
                                                                        Integer {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ),
                                                                name: Identifier {
                                                                    [RANGE]
                                                                },
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    KeywordArgument(
                                                        KeywordArgument {
                                                            name: Identifier {
                                                                [RANGE]
                                                            },
                                                            value: PrimaryExpression(
                                                                String(
                                                                    String {
                                                                        children: [
                                                                            StringStart(
                                                                                StringStart {
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                            StringContent(
                                                                                StringContent {
                                                                                    children: [],
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                            StringEnd(
                                                                                StringEnd {
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                        ],
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                            ),
                                                            [RANGE]
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
