examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__power_operator_precedence.snap
---
source: src/tests/corpus/expressions.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 9,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 15,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 3,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 8,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 7,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                BinaryOperator(
                    BinaryOperator {
                        operator: AstNodeId {
                            id: 4,
                            _marker: PhantomData<ast_python::generated::Operators_1>,
                        },
                        left: AstNodeId {
                            id: 3,
                            _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                        },
                        right: AstNodeId {
                            id: 5,
                            _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                        },
                        _range: Range {
                            start_byte: 1,
                            end_byte: 8,
                            start_point: Point {
                                row: 1,
                                column: 0,
                            },
                            end_point: Point {
                                row: 1,
                                column: 7,
                            },
                        },
                        _id: 2,
                        _parent: Some(
                            1,
                        ),
                    },
                ),
            ),
        ),
        Integer(
            Integer {
                _range: Range {
                    start_byte: 1,
                    end_byte: 2,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 1,
                    },
                },
                _id: 3,
                _parent: Some(
                    2,
                ),
            },
        ),
        Token_StarStar(
            Token_StarStar {
                _range: Range {
                    start_byte: 2,
                    end_byte: 4,
                    start_point: Point {
                        row: 1,
                        column: 1,
                    },
                    end_point: Point {
                        row: 1,
                        column: 3,
                    },
                },
                _id: 4,
                _parent: Some(
                    2,
                ),
            },
        ),
        BinaryOperator(
            BinaryOperator {
                operator: AstNodeId {
                    id: 7,
                    _marker: PhantomData<ast_python::generated::Operators_1>,
                },
                left: AstNodeId {
                    id: 6,
                    _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                },
                right: AstNodeId {
                    id: 8,
                    _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                },
                _range: Range {
                    start_byte: 4,
                    end_byte: 8,
                    start_point: Point {
                        row: 1,
                        column: 3,
                    },
                    end_point: Point {
                        row: 1,
                        column: 7,
                    },
                },
                _id: 5,
                _parent: Some(
                    2,
                ),
            },
        ),
        Integer(
            Integer {
                _range: Range {
                    start_byte: 4,
                    end_byte: 5,
                    start_point: Point {
                        row: 1,
                        column: 3,
                    },
                    end_point: Point {
                        row: 1,
                        column: 4,
                    },
                },
                _id: 6,
                _parent: Some(
                    5,
                ),
            },
        ),
        Token_StarStar(
            Token_StarStar {
                _range: Range {
                    start_byte: 5,
                    end_byte: 7,
                    start_point: Point {
                        row: 1,
                        column: 4,
                    },
                    end_point: Point {
                        row: 1,
                        column: 6,
                    },
                },
                _id: 7,
                _parent: Some(
                    5,
                ),
            },
        ),
        Integer(
            Integer {
                _range: Range {
                    start_byte: 7,
                    end_byte: 8,
                    start_point: Point {
                        row: 1,
                        column: 6,
                    },
                    end_point: Point {
                        row: 1,
                        column: 7,
                    },
                },
                _id: 8,
                _parent: Some(
                    5,
                ),
            },
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 10,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 9,
                        end_byte: 14,
                        start_point: Point {
                            row: 2,
                            column: 0,
                        },
                        end_point: Point {
                            row: 2,
                            column: 5,
                        },
                    },
                    _id: 9,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                UnaryOperator(
                    UnaryOperator {
                        operator: AstNodeId {
                            id: 11,
                            _marker: PhantomData<ast_python::generated::Operators_4>,
                        },
                        argument: AstNodeId {
                            id: 12,
                            _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                        },
                        _range: Range {
                            start_byte: 9,
                            end_byte: 14,
                            start_point: Point {
                                row: 2,
                                column: 0,
                            },
                            end_point: Point {
                                row: 2,
                                column: 5,
                            },
                        },
                        _id: 10,
                        _parent: Some(
                            9,
                        ),
                    },
                ),
            ),
        ),
        Token_Minus(
            Token_Minus {
                _range: Range {
                    start_byte: 9,
                    end_byte: 10,
                    start_point: Point {
                        row: 2,
                        column: 0,
                    },
                    end_point: Point {
                        row: 2,
                        column: 1,
                    },
                },
                _id: 11,
                _parent: Some(
                    10,
                ),
            },
        ),
        BinaryOperator(
            BinaryOperator {
                operator: AstNodeId {
                    id: 14,
                    _marker: PhantomData<ast_python::generated::Operators_1>,
                },
                left: AstNodeId {
                    id: 13,
                    _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                },
                right: AstNodeId {
                    id: 15,
                    _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                },
                _range: Range {
                    start_byte: 10,
                    end_byte: 14,
                    start_point: Point {
                        row: 2,
                        column: 1,
                    },
                    end_point: Point {
                        row: 2,
                        column: 5,
                    },
                },
                _id: 12,
                _parent: Some(
                    10,
                ),
            },
        ),
        Integer(
            Integer {
                _range: Range {
                    start_byte: 10,
                    end_byte: 11,
                    start_point: Point {
                        row: 2,
                        column: 1,
                    },
                    end_point: Point {
                        row: 2,
                        column: 2,
                    },
                },
                _id: 13,
                _parent: Some(
                    12,
                ),
            },
        ),
        Token_StarStar(
            Token_StarStar {
                _range: Range {
                    start_byte: 11,
                    end_byte: 13,
                    start_point: Point {
                        row: 2,
                        column: 2,
                    },
                    end_point: Point {
                        row: 2,
                        column: 4,
                    },
                },
                _id: 14,
                _parent: Some(
                    12,
                ),
            },
        ),
        Integer(
            Integer {
                _range: Range {
                    start_byte: 13,
                    end_byte: 14,
                    start_point: Point {
                        row: 2,
                        column: 4,
                    },
                    end_point: Point {
                        row: 2,
                        column: 5,
                    },
                },
                _id: 15,
                _parent: Some(
                    12,
                ),
            },
        ),
    ],
}
