examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__print_as_identifier@print(d, *e).snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    ListSplat(
                                                        ListSplat {
                                                            children: Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                            [RANGE]
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
